_sass/catalog.scss
/* ... */
@media screen and (max-width: 650px) {
  .modal-window {
    width: 100%;
    height: 100%;
    margin-top: 2rem;
  }
}
@media screen and (max-width: 770px) {
  .catalog-load-more {
    display: unset;
  }
  .dropbtn {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;
  }

  .catalog{

    .row {
      display: flex;
      // flex-direction: column;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 100%;
    }

    .column-lg {
      display: block;
    }
    .mobile_column_sm {
      display: unset;
    }
  }

  .filter-wrap {
    display: flex;
    width: 100%;
    height: auto;
    flex-direction: column;
    gap: 1.5rem;
    padding-bottom: 5rem;
    padding-left: 1rem;
    margin-bottom: 3rem;
    .dropdown {
      align-self: center;
      margin-bottom: 7rem;
    }
    .category-div {
      padding-left: 15px;
    }
    .category-div,
    .compatibility-div,
    .tech-div {
      display: grid;
      grid-template-columns: 1fr 1fr;
      label {
        margin: 0;
      }
      row-gap: 2rem;
      column-gap: 2rem;
      .open-service-mesh {
        grid-row: 4/5;
        grid-column: 1/3;
      }
    }
    .category-para,
    .category-div,
    .compatibility-div,
    .tech-div,
    .compatibility-para,
    .tech-para {
      display: none;
    }
    .load-more {
      display: block;
      align-self: center;
    }
  }
}
@media screen and (max-width: 644px) {
  .modal-image {
    width: 230px;
    padding-bottom: 2rem;
  }
  .modal-h1,
  .modal-h2 {
    font-size: 1rem;
  }
  .related-patterns {
    display: none;
  }
  .modal-card {
    display: none;
  }
  .btn-grp {
    flex-direction: column;
    align-items: center;
  }
}

